<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:gravity="center_horizontal">



                <RelativeLayout
                    android:layout_width="350dp"
                    android:layout_height="55dp"
                    android:gravity="center"
                    android:ellipsize="end"
                    android:lines="1"
                    android:background="@drawable/shape_topico">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="DETALLE DE PEDIDO"
                        android:textColor="@color/color_white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:layout_margin="10.5dp">
                <LinearLayout
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15dp"
                        android:text="@string/detalle_pedido"/>
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:lines="1"
                    android:background="@drawable/shape_topico_pedido"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/ic_user"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_marginStart="4dp">
                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/cliente_order"
                                android:text="Nombres y Apellidos"
                                android:textStyle="bold"
                                android:textSize="15dp"
                                android:textColor="@color/color_black"
                                />

                            </LinearLayout>

                            <TextView
                                android:id="@+id/fecha_order"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:text="Fecha"
                                android:textSize="12dp"/>

                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="50dp"
                            android:text="x"
                            android:textStyle="bold"
                            android:textSize="12dp"
                            android:textColor="@color/color_black"/>
                        <TextView
                            android:id="@+id/cantidad_order"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="1dp"
                            android:text="2"
                            android:textStyle="bold"
                            android:textSize="12dp"
                            android:textColor="@color/color_black"/>


                        <TextView
                            android:id="@+id/pedido_order"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="Hamburguesa clásica"
                            android:textStyle="bold"
                            android:textSize="12dp"
                            android:textColor="@color/color_black"/>
                            <TextView
                                android:id="@+id/precio_order"
                                android:gravity="center"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="9.00"
                                android:textStyle="bold"
                                android:textSize="12dp"
                                android:textColor="@color/color_black"/>
                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="2dp"
                            android:background="@color/color_black"/>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="2dp"
                            android:gravity="right">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="30dp"
                                android:text="Total"
                                android:textColor="@color/color_black"
                                android:textSize="12dp"
                                />

                            <TextView
                                android:id="@+id/precioTotal_order"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_gravity=""
                                android:layout_marginRight="45dp"
                                android:text="18.00"
                                android:textColor="@color/color_black"
                                android:textSize="12dp" />
                        </LinearLayout>
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:layout_margin="10.5dp">
                <LinearLayout
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15dp"
                        android:text="@string/detalle_pago"/>
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="350dp"
                    android:layout_height="80dp"
                    android:gravity="center"
                    android:ellipsize="end"
                    android:lines="1"
                    android:background="@drawable/shape_topico_pedido">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:gravity="center">

                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:src="@drawable/ic_wallet"/>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:layout_marginStart="4dp">
                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="10dp">
                                    <TextView
                                        android:id="@+id/tipoPago_order"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="Tipo de pago"
                                        android:textStyle="bold"
                                        android:textSize="15dp"
                                        android:textColor="@color/color_black"
                                        />
                                </LinearLayout>

                            </LinearLayout>
                        </LinearLayout>
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:layout_margin="10.5dp">
                <LinearLayout
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15dp"
                        android:text="@string/detalle_envio"/>
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="350dp"
                    android:layout_height="80dp"
                    android:ellipsize="end"
                    android:lines="1"
                    android:background="@drawable/shape_topico_pedido">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_marginTop="6dp"
                            android:src="@drawable/ic_map" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:layout_marginTop="15dp"
                            android:gravity="center_vertical"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp">

                                <TextView
                                    android:id="@+id/direccion_order"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Urb. California Mz. J Lt. 20"
                                    android:textColor="@color/color_black"
                                    android:textSize="15dp"
                                    android:textStyle="bold" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Referencia: "
                                    android:textSize="12dp" />

                                <TextView
                                    android:id="@+id/referencia_order"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Al costado del Grifo San Judas Tadeo"
                                    android:textSize="12dp" />
                            </LinearLayout>

                        </LinearLayout>
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:layout_margin="10.5dp">
                <LinearLayout
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15dp"
                        android:text="Estado de pedido"/>
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="350dp"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:ellipsize="end"
                    android:lines="1"
                    android:background="@drawable/shape_topico_pedido">

                    <TextView
                        android:id="@+id/estadoOrden_order"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Estado de pedido"
                        android:textSize="15dp"
                        android:textColor="@color/color_black"
                        android:textStyle="bold" />

                </RelativeLayout>
            </LinearLayout>




        </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>